tests/ui/methods/call_method_unknown_pointee.stderr
error[E0699]: cannot call a method on a raw pointer with an unknown pointee type
  --> $DIR/call_method_unknown_pointee.rs:10:41
   |
LL |         let _a: i32 = (ptr as *const _).read();
   |                                         ^^^^

error[E0699]: cannot call a method on a raw pointer with an unknown pointee type
  --> $DIR/call_method_unknown_pointee.rs:13:24
   |
LL |         let _b: u8 = b.read();
   |                        ^^^^

error[E0699]: cannot call a method on a raw pointer with an unknown pointee type
  --> $DIR/call_method_unknown_pointee.rs:21:39
   |
LL |         let _a: i32 = (ptr as *mut _).read();
   |                                       ^^^^

error[E0699]: cannot call a method on a raw pointer with an unknown pointee type
  --> $DIR/call_method_unknown_pointee.rs:24:11
   |
LL |         b.write(10);
   |           ^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0699`.
